# 5g-ffr-showcase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: index.html  methodology.md  reproducibility.md
scripts/: generate_figures.py  run_paper_alignment.py  verify_paper_trends.py
src/ffr_showcase/: __init__.py  config.py  figures.py  simulation.py  trends.py
tests/: test_simulation.py  test_trends.py
